--- a/myBank/myBank/Base.lproj/Main.storyboard
+++ b/myBank/myBank/Base.lproj/Main.storyboard
@@ -14,13 +14,35 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Sz-ET-ePf">
+                                <rect key="frame" x="0.0" y="238" width="375" height="540"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥80000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pTb-hg-Ebi">
+                                <rect key="frame" x="89" y="89" width="197" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pTb-hg-Ebi" secondAttribute="trailing" constant="89" id="6th-gF-xJM"/>
+                            <constraint firstItem="6Sz-ET-ePf" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Lfx-Ll-VBU"/>
+                            <constraint firstItem="6Sz-ET-ePf" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SFg-vI-qZp"/>
+                            <constraint firstItem="6Sz-ET-ePf" firstAttribute="top" secondItem="pTb-hg-Ebi" secondAttribute="bottom" constant="107" id="hh6-Oi-zbk"/>
+                            <constraint firstItem="pTb-hg-Ebi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="89" id="jIY-KF-FlI"/>
+                            <constraint firstItem="6Sz-ET-ePf" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mZO-uT-yhy"/>
+                            <constraint firstItem="pTb-hg-Ebi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="45" id="rbc-4F-cb4"/>
+                            <constraint firstItem="6Sz-ET-ePf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wXr-dv-F6D"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="138"/>
+            <point key="canvasLocation" x="138.40000000000001" y="137.4384236453202"/>
         </scene>
     </scenes>
 </document>
