--- a/myBank/myBank/DifferenceCell.xib
+++ b/myBank/myBank/DifferenceCell.xib
@@ -17,38 +17,39 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日付" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zz-Qa-JEg">
-                        <rect key="frame" x="244" y="10" width="60" height="14.5"/>
+                        <rect key="frame" x="264" y="10" width="40" height="14.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="ISR-o7-37T"/>
-                            <constraint firstAttribute="height" constant="14.5" id="Lag-Dn-VyY"/>
+                            <constraint firstAttribute="width" constant="40" id="onV-HC-ZEJ"/>
+                            <constraint firstAttribute="height" constant="14.5" id="rxz-2W-96Y"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- 250" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YjT-bj-vKi">
-                        <rect key="frame" x="16" y="52.5" width="288" height="32.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="キーボード" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3oP-F3-0Rv">
+                        <rect key="frame" x="20" y="103" width="280" height="20"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="キーボード" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3oP-F3-0Rv">
-                        <rect key="frame" x="16" y="102" width="288" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- 250" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YjT-bj-vKi">
+                        <rect key="frame" x="20" y="42.5" width="280" height="32.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="3oP-F3-0Rv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="AZz-vr-kA4"/>
-                    <constraint firstAttribute="trailing" secondItem="3oP-F3-0Rv" secondAttribute="trailing" constant="16" id="Ds3-ow-1Mk"/>
-                    <constraint firstAttribute="trailing" secondItem="3zz-Qa-JEg" secondAttribute="trailing" constant="16" id="ELR-aP-aAt"/>
-                    <constraint firstItem="3zz-Qa-JEg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="244" id="MqW-gF-jm1"/>
-                    <constraint firstItem="3oP-F3-0Rv" firstAttribute="top" secondItem="YjT-bj-vKi" secondAttribute="bottom" constant="17" id="ZJj-RJ-rlG"/>
-                    <constraint firstItem="3zz-Qa-JEg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="f0O-cJ-2Mm"/>
-                    <constraint firstAttribute="bottom" secondItem="3oP-F3-0Rv" secondAttribute="bottom" constant="27.5" id="iJn-Rk-BsY"/>
-                    <constraint firstAttribute="trailing" secondItem="YjT-bj-vKi" secondAttribute="trailing" constant="16" id="mFC-9O-7ru"/>
-                    <constraint firstItem="YjT-bj-vKi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="oNC-5D-9fj"/>
+                    <constraint firstAttribute="trailing" secondItem="YjT-bj-vKi" secondAttribute="trailing" constant="20" id="9fq-Id-S6e"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="3oP-F3-0Rv" secondAttribute="trailing" constant="4" id="I5o-5S-Qll"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="3oP-F3-0Rv" secondAttribute="bottom" constant="16" id="Jns-xt-9Up"/>
+                    <constraint firstItem="3zz-Qa-JEg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Jud-cF-gtc"/>
+                    <constraint firstItem="3oP-F3-0Rv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="4" id="QhT-k8-V1g"/>
+                    <constraint firstAttribute="trailing" secondItem="3zz-Qa-JEg" secondAttribute="trailing" constant="16" id="RsD-Gt-4nE"/>
+                    <constraint firstItem="3oP-F3-0Rv" firstAttribute="top" secondItem="YjT-bj-vKi" secondAttribute="bottom" constant="28" id="W5E-yW-QG5"/>
+                    <constraint firstItem="YjT-bj-vKi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ZKE-lR-Fod"/>
+                    <constraint firstItem="3zz-Qa-JEg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="264" id="gL8-Yn-dDZ"/>
+                    <constraint firstItem="YjT-bj-vKi" firstAttribute="top" secondItem="3zz-Qa-JEg" secondAttribute="bottom" constant="18" id="m5v-4J-Luq"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -57,7 +58,7 @@
                 <outlet property="dateLabel" destination="3zz-Qa-JEg" id="X7a-iN-yyE"/>
                 <outlet property="differenceLabel" destination="YjT-bj-vKi" id="tbh-Q2-OIT"/>
             </connections>
-            <point key="canvasLocation" x="-13.043478260869566" y="139.28571428571428"/>
+            <point key="canvasLocation" x="-107" y="123"/>
         </tableViewCell>
     </objects>
 </document>
