ViewControllerとそれに紐づくclassファイルを追加

--- a/myBank/myBank/Base.lproj/Main.storyboard
+++ b/myBank/myBank/Base.lproj/Main.storyboard
@@ -49,6 +49,21 @@
             </objects>
             <point key="canvasLocation" x="1080.8" y="137.4384236453202"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="pxj-rz-KBS">
+            <objects>
+                <viewController id="mdJ-e9-vdd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nKP-Xd-CcJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="9SQ-he-cTI"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rJ2-5W-8B8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2094" y="133"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="sjC-Ot-iIh">
             <objects>
