--- a/myBank/myBank/Base.lproj/Main.storyboard
+++ b/myBank/myBank/Base.lproj/Main.storyboard
@@ -39,7 +39,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="cos-W5-Bse"/>
+                    <navigationItem key="navigationItem" id="cos-W5-Bse">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="dollarsign.circle" catalog="system" id="miT-Br-obi">
+                            <connections>
+                                <segue destination="mdJ-e9-vdd" kind="show" id="K6s-3B-Qto"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="6Sz-ET-ePf" id="sfj-Zv-Ek5"/>
                         <outlet property="totalLabel" destination="pTb-hg-Ebi" id="mo8-KN-Xt3"/>
@@ -49,20 +55,48 @@
             </objects>
             <point key="canvasLocation" x="1080.8" y="137.4384236453202"/>
         </scene>
-        <!--View Controller-->
+        <!--Change View Controller-->
         <scene sceneID="pxj-rz-KBS">
             <objects>
-                <viewController id="mdJ-e9-vdd" sceneMemberID="viewController">
+                <viewController id="mdJ-e9-vdd" customClass="ChangeViewController" customModule="myBank" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nKP-Xd-CcJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="yPf-zR-dRS">
+                                <rect key="frame" x="89" y="148" width="196" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8kd-jW-HYq">
+                                <rect key="frame" x="84" y="389" width="207" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xge-rr-j1e">
+                                <rect key="frame" x="84" y="258" width="207" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="9SQ-he-cTI"/>
                     </view>
+                    <navigationItem key="navigationItem" id="jqc-4C-7FF"/>
+                    <connections>
+                        <outlet property="contentsLabel" destination="8kd-jW-HYq" id="IQ3-1B-cAM"/>
+                        <outlet property="incomeOrSpend" destination="yPf-zR-dRS" id="zfP-bj-nCX"/>
+                        <outlet property="moneyLabel" destination="Xge-rr-j1e" id="yQi-gU-DSR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rJ2-5W-8B8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2094" y="133"/>
+            <point key="canvasLocation" x="2093.5999999999999" y="132.26600985221674"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sjC-Ot-iIh">
@@ -83,4 +117,7 @@
             <point key="canvasLocation" x="138.40000000000001" y="137.4384236453202"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dollarsign.circle" catalog="system" width="128" height="121"/>
+    </resources>
 </document>
